//
// Protocol buffers definition for Dadkvs Paxos Service
//
syntax = "proto3";
package dadkvs;

/**
 * A request with a sequence number assigned by the leader server
 */
message PaxosValue {
  int32 requestid   = 1;
  int32 requestseq  = 2;
}

message PhaseOneRequest {
  int32 phase1config    = 1;
  int32 phase1index     = 2;
  int32 phase1timestamp = 3;
  int32 phase1txid      = 4;
}

message PhaseOneReply {
  int32 phase1config          = 1;
  int32 phase1index           = 2;
  bool  phase1accepted        = 3;
  PaxosValue phase1value      = 4;
  int32 phase1timestamp       = 5;
  int32 phase1txid            = 6;
}

message PhaseTwoRequest {
  int32 phase2config          = 1;
  int32 phase2index           = 2;
  PaxosValue phase2value      = 3;
  int32 phase2timestamp       = 4;
  int32 phase2txid            = 5;
}

message PhaseTwoReply {
  int32 phase2config   = 1;
  int32 phase2index    = 2;
  bool  phase2accepted = 3;
  int32 phase2txid     = 4;
}

message LearnRequest {
  int32 learnconfig         = 1;
  int32 learnindex          = 2;
  PaxosValue learnvalue     = 3;
  int32 learntimestamp      = 4;
  int32 learntxid           = 5;
}

message LearnReply {
  int32 learnconfig   = 1;
  int32 learnindex    = 2;
  bool  learnaccepted = 3;
}

service DadkvsPaxosService {
  rpc phaseone (PhaseOneRequest) returns (PhaseOneReply);
  rpc phasetwo (PhaseTwoRequest) returns (PhaseTwoReply);
  rpc learn (LearnRequest) returns (LearnReply);
}






